--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
+  <script type="text/javascript" src="jquery-3.5.1.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -68,7 +69,7 @@
   </div>
   
 
-  <section class="about">
+  <section class="about" id="about">
     <div class="about-box">
       <div class="about-text1">
         <h5>About Techvault</h5>
